--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Desafio 1</title>
   </head>
-  <body class="bg-grey-600">
+  <body class="bg-gray-600">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
